@@ -97,7 +97,7 @@ while ($hit_and_run_arr = mysqli_fetch_assoc($hit_and_run_rez)) {
             $color = ($minus_ratio > 0 ? get_ratio_color($minus_ratio) : 'limegreen');
             $users = $hit_and_run_arr;
             $users['id'] = (int) $Uid_ID;
-            $HTMLOUT .= '<tr><td>' . $avatar . '</td>
+            $HTMLOUT .= '<tr><td class="has-text-centered w-25 mw-150">' . $avatar . '</td>
             <td><a class="altlink" href="' . $site_config['baseurl'] . '/userdetails.php?id=' . (int) $Uid_ID . '&amp;completed=1#completed">' . htmlsafechars($users['username']) . '</a>  [ ' . get_user_class_name($hit_and_run_arr['class']) . ' ]
 </td>
             <td><a class="altlink" href="details.php?id=' . (int) $T_ID . '&amp;hit=1">' . htmlsafechars($hit_and_run_arr['name']) . '</a><br>
