@@ -1,4 +1,5 @@
 27 Jun 2018
+update: adjust avatar display size for consistency
 update: use real ip when logging failed logins
 add: TVMaze TV Schedule
 add: php-bz2 requirement for TVMaze TV Schedule
